entity audit added

--- a/WebApp.Core/WebApp.Core.csproj
+++ b/WebApp.Core/WebApp.Core.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Compile Include="DataType\ObjectExtension.cs" />
     <Compile Include="Extensions\EnumExtension.cs" />
+    <Compile Include="Extensions\ClassExtension.cs" />
+    <Compile Include="Extensions\ObjectExtension.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -87,11 +89,12 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.DirectoryServices" Version="5.0.0" />
     <PackageReference Include="System.Threading.Channels" Version="5.0.0" />
-    <PackageReference Include=" Microsoft.Extensions.Identity.Core" Version="5.0.1" />
+    <PackageReference Include=" Microsoft.Extensions.Identity.Core" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="MassTransit" Version="7.2.1" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.1" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.1" />
