--- a/WebApp.Sql/WebApp.Sql.csproj
+++ b/WebApp.Sql/WebApp.Sql.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\**" />
+    <Compile Remove="EntityConfiguration\**" />
+    <EmbeddedResource Remove="Entities\**" />
+    <EmbeddedResource Remove="EntityConfiguration\**" />
+    <None Remove="Entities\**" />
+    <None Remove="EntityConfiguration\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.16" />
@@ -18,5 +27,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebApp.Core\WebApp.Core.csproj" />
+    <ProjectReference Include="..\WebApp.Entity\WebApp.Entity.csproj" />
   </ItemGroup>
 </Project>
