mongo repository class added

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
   },
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "LogStore",
+    "AuditCollectionName": "Audits"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
