--- a/WebApp.Core/WebApp.Core.csproj
+++ b/WebApp.Core/WebApp.Core.csproj
@@ -118,6 +118,8 @@
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.7.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
     <PackageReference Include="Seq.Extensions.Logging" Version="4.0.2" />
+
+    <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
   </ItemGroup>
 
   <ItemGroup>
