--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
+    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger1; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -22,5 +22,18 @@
   "Domain": {
     "Client1": [ "https://localhost:4200", "http://localhost:4200" ],
     "Client2": [ "https://localhost:4200", "http://localhost:4200" ]
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ],
+    "Properties": {
+      "Application": "DotnetLogger"
+    }
   }
 }
