--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,16 @@ dotnet_diagnostic.S125.severity = none
 
 # S2699: Tests should include assertions
 dotnet_diagnostic.S2699.severity = none
+
+# S1450: Private fields only used as local variables in methods should become local variables
+dotnet_diagnostic.S1450.severity = none
+
+
+csharp_style_pattern_matching_over_as_with_null_check = true:none
+dotnet_style_object_initializer = false:none
+
+# CA1822: Mark members as static
+dotnet_diagnostic.CA1822.severity = none
+
+# S2365: Properties should not make collection or array copies
+dotnet_diagnostic.S2365.severity = none
