--- a/WebApp/Properties/launchSettings.json
+++ b/WebApp/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DotnetCoreApplicationBoilerplate": {
+    "WebApp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
