unit test coverage library added

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ trigger:
     include:
       - main
       - master
+      - request-log
 
 pool:
   vmImage: 'windows-latest'
@@ -21,36 +22,48 @@ steps:
     command: 'restore'
     projects: "**/*.csproj"
 
+- task: SonarQubePrepare@5
+  inputs:
+    SonarQube: 'Azure 2023 VM SonarQube'
+    scannerMode: 'MSBuild'
+    projectKey: 'DotnetCoreLogger'
+    projectName: 'DotnetCoreLogger'
+
 - task: DotNetCoreCLI@2
   displayName: 'dotnet build $(buildConfiguration)'
   inputs:
     command: 'build'
     arguments: '--configuration $(buildConfiguration) --no-restore'
 
-# - task: DotNetCoreCLI@2
-#   displayName: 'Dotnet Test Core'
-#   inputs:
-#     command: test
-#     projects: 'WebApp.Core.Test/WebApp.Core.Test.csproj'
-#     arguments: '
-#       --configuration $(buildConfiguration)
-#       --no-build
-#       --no-restore
-#       --logger "trx;LogFileName=testresults.trx" 
-#       /p:CollectCoverage=true
-#       /p:CoverletOutputFormat=cobertura
-#       /p:CoverletOutput=./TestResults/
-#       /p:Threshold=35
-#       /p:ThresholdType=line
-#       /p:Exclude="[WebApp.Sql]*%2c[WebApp.Service]*"
-#     '
-# - task: PublishCodeCoverageResults@1
-#   displayName: 'Dotnet Test Publish Code Coverage'
-#   inputs:
-#     codeCoverageTool: 'cobertura'
-#     summaryFileLocation: $(Build.SourcesDirectory)/**/TestResults/coverage.cobertura.xml
-#     reportDirectory: $(Build.SourcesDirectory)/coveragereport
-#     failIfCoverageEmpty: false
+- task: DotNetCoreCLI@2
+  displayName: 'WebApp Core Test'
+  inputs:
+    command: test
+    projects: 'WebApp.Core.Test/WebApp.Core.Test.csproj'
+    arguments: '
+      --configuration $(buildConfiguration)
+      --no-build
+      --no-restore
+      --logger "trx;LogFileName=testresults.trx" 
+      /p:CollectCoverage=true
+      /p:CoverletOutputFormat=cobertura
+      /p:CoverletOutput=./TestResults/
+      /p:Threshold=0
+      /p:ThresholdType=line
+      /p:Exclude="[WebApp.Sql]*%2c[WebApp.Service]*"
+    '
+- task: PublishCodeCoverageResults@1
+  displayName: 'Dotnet Test Publish Code Coverage'
+  inputs:
+    codeCoverageTool: 'cobertura'
+    summaryFileLocation: $(Build.SourcesDirectory)/**/TestResults/coverage.cobertura.xml
+    reportDirectory: $(Build.SourcesDirectory)/coveragereport
+    failIfCoverageEmpty: false
+
+- task: SonarQubeAnalyze@5
+- task: SonarQubePublish@5
+  inputs:
+    pollingTimeoutSec: '300'
 
 - task: DotNetCoreCLI@2
   displayName: 'Artifact Generate'
