--- a/WebApp.Core/WebApp.Core.csproj
+++ b/WebApp.Core/WebApp.Core.csproj
@@ -119,6 +119,7 @@
     <PackageReference Include="Seq.Extensions.Logging" Version="4.0.2" />
 
     <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
   </ItemGroup>
 
   <ItemGroup>
