--- a/WebApp.Core.Test/WebApp.Core.Test.csproj
+++ b/WebApp.Core.Test/WebApp.Core.Test.csproj
@@ -23,4 +23,13 @@
     <ProjectReference Include="..\WebApp.Core\WebApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Jsons\unescape-json.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Jsons\escape-json.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
