--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Projects\Documents\github\webapp\WebApp\WebApp.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Controllers\Configurations\**" />
     <Content Remove="Controllers\Configurations\**" />
