--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -6,5 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "Jwt": {
+    "Audience": "my-dotnet-logger-api",
+    "Issuer": "me",
+    "SecretKey": "my-dotnet-logger-api-secret-key",
+    "Alg": "HS256",
+    "ValidForInMinitues": 30,
+    "RefreshTokenValidForInDays": 30,
+    "LockUserJwtInMinitues": 60,
+    "ValidateIssuer": true,
+    "ValidateAudience": true,
+    "ValidateIssuerSigningKey": true,
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true,
+    "AuthenticationScheme": "Bearer",
+    "TokenType": "JWT"
   }
 }
