--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,7 @@ dotnet_diagnostic.S2699.severity = none
 # S1450: Private fields only used as local variables in methods should become local variables
 dotnet_diagnostic.S1450.severity = none
 
+dotnet_diagnostic.CS1591.severity = none
 
 csharp_style_pattern_matching_over_as_with_null_check = true:none
 dotnet_style_object_initializer = false:none
@@ -18,3 +19,6 @@ dotnet_diagnostic.CA1822.severity = none
 
 # S2365: Properties should not make collection or array copies
 dotnet_diagnostic.S2365.severity = none
+
+# IDE0037: Use inferred member name
+dotnet_style_prefer_inferred_anonymous_type_member_names = false:suggestion
