appsettings config update

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAppConnection": "Data Source=52.255.157.110;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
+    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
