--- a/WebApp.Logger/WebApp.Logger.csproj
+++ b/WebApp.Logger/WebApp.Logger.csproj
@@ -8,11 +8,11 @@
   <ItemGroup>
     <Folder Include="Loggers\Serilogs\Sinks\" />
     <Folder Include="Providers\Files\" />
-    <Folder Include="Providers\CosmosDbs\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WebApp.Common\WebApp.Common.csproj" />
+    <ProjectReference Include="..\WebApp.Core\WebApp.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +21,7 @@
     <PackageReference Include="FluentValidation" Version="9.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.16" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
