skip and ignore request logic added

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -61,11 +61,11 @@
       "Request": {
         "Mode": "Min",
         "HttpVerbs": [ "POST", "GET", "PUT", "PATCH", "DELETE" ],
-        "IgnoreRequests": [ "*password*", "*token*" ],
+        "IgnoreRequests": [ "password", "token", "config", "log" ],
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc" ],
-        "MaskColumns": [ "Password" ]
+        "IgnoreColumns": [ "Id", "CreateDateUtc", "response" ],
+        "MaskColumns": [ "Password", "appStatusCode" ]
       },
       "Audit": {
         "Mode": "Min",
