Unit testing of LogOptionExtension

--- a/WebApp.Logger.Test/WebApp.Logger.Test.csproj
+++ b/WebApp.Logger.Test/WebApp.Logger.Test.csproj
@@ -24,6 +24,12 @@
     <None Update="Samples\JsonRemoveKey.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Samples\LogOptionExtentionTestBlankData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\LogOptionExtentionTestValidData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
