--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -71,7 +71,7 @@
         "Mode": "Min",
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc" ],
+        "IgnoreColumns": [ "Id", "CreatedDateUtc"],
         "MaskColumns": [ "Password" ]
       }
     },
