masking is fixed for audit log

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -72,7 +72,7 @@
         "EnableMask": true,
         "EnableIgnore": true,
         "IgnoreColumns": [ "Id", "CreatedDateUtc"],
-        "MaskColumns": [ "Password" ]
+        "MaskColumns": [ "Password", "Name" ]
       }
     },
     "Provider": {
