--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
+    "WebAppConnection": "Data Source=BS-1002\\SQLEXPRESS;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 12345; Integrated Security=False;MultipleActiveResultSets=True"
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -71,8 +71,8 @@
         "Mode": "Min",
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc" ],
-        "MaskColumns": [ "Password" ]
+        "IgnoreColumns": [ "Id", "CreateDateUtc", "CreatedBy" ],
+        "MaskColumns": [ "Password", "CreatedDateUtc" ]
       }
     },
     "Provider": {
