PrepareRequestModel is created at LogOptionExtension and used in HttpRequestMiddleware

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAppConnection": "Data Source=BS-1002\\SQLEXPRESS;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 12345; Integrated Security=False;MultipleActiveResultSets=True"
+    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "MSSql",
+    "ProviderType": "File",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "Mode": "Full",
     "EnableMask": true,
@@ -61,11 +61,11 @@
       "Request": {
         "Mode": "Min",
         "HttpVerbs": [ "POST", "GET", "PUT", "PATCH", "DELETE" ],
-        "IgnoreRequests": [ "password", "token", "config", "log" ],
+        "IgnoreRequests": [ "password", "token", "config", "/log" ],
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc", "response" ],
-        "MaskColumns": [ "Password", "appStatusCode" ]
+        "IgnoreColumns": [ "Id", "CreateDateUtc" ],
+        "MaskColumns": [ "Password", "body" ]
       },
       "Audit": {
         "Mode": "Min",
