--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAppConnection": "Data Source=BS-1002\\SQLEXPRESS;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 12345; Integrated Security=False;MultipleActiveResultSets=True"
+    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetCoreLogger; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -39,6 +39,8 @@
   "LoggerWrapper": {
     "ProviderType": "MSSql",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
+    "IgnoreEndPoints": [],
+    "IgnoreHttpVerbs": [],
     "Mode": "Full",
     "EnableMask": true,
     "EnableIgnore": true,
@@ -61,7 +63,7 @@
       "Request": {
         "Mode": "Min",
         "HttpVerbs": [ "POST", "GET", "PUT", "PATCH", "DELETE" ],
-        "IgnoreRequests": [ "password", "token", "config", "log" ],
+        "IgnoreRequests": [ "password", "token", "config", "/log" ],
         "EnableMask": true,
         "EnableIgnore": true,
         "IgnoreColumns": [ "Id", "CreateDateUtc", "response" ],
@@ -71,8 +73,12 @@
         "Mode": "Min",
         "EnableMask": true,
         "EnableIgnore": true,
+        "EnableIgnoreTable": true,
+        "EnableIgnoreSchemas": true,
         "IgnoreColumns": [ "Id", "CreateDateUtc", "CreatedBy" ],
-        "MaskColumns": [ "Password", "CreatedDateUtc" ]
+        "MaskColumns": [ "Password", "CreatedDateUtc" ],
+        "IgnoreTables": [],
+        "IgnoreSchemas": []
       }
     },
     "Provider": {
