mongodb provider is implemented according to configuration

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "MSSql",
+    "ProviderType": "Mongo",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "Mode": "Full",
     "EnableMask": true,
@@ -61,7 +61,7 @@
       "Request": {
         "Mode": "Min",
         "HttpVerbs": [ "POST", "GET", "PUT", "PATCH", "DELETE" ],
-        "IgnoreRequests": [ "password", "token", "config", "log" ],
+        "IgnoreRequests": [ "password", "token", "config", "/log" ],
         "EnableMask": true,
         "EnableIgnore": true,
         "IgnoreColumns": [ "Id", "CreateDateUtc", "response" ],
