--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -55,7 +55,7 @@
         "Mode": "Min",
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc" ],
+        "IgnoreColumns": [ "Id" ],
         "MaskColumns": [ "Password" ]
       },
       "Request": {
