in audit log filtering is modified for new and old values

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -71,14 +71,14 @@
       },
       "Audit": {
         "Mode": "Min",
-        "EnableMask": true,
-        "EnableIgnore": true,
+        "EnableIgnoreSchema": true,
         "EnableIgnoreTable": true,
-        "EnableIgnoreSchemas": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc", "CreatedBy" ],
-        "MaskColumns": [ "Password", "CreatedDateUtc" ],
+        "EnableIgnore": true,
+        "EnableMask": true,
+        "IgnoreSchemas": [],
         "IgnoreTables": [],
-        "IgnoreSchemas": []
+        "IgnoreColumns": [ "Id", "CreatedBy" ],
+        "MaskColumns": [ "Password", "motto", "createdDateUtc" ]
       }
     },
     "Provider": {
