Git merge resolved

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -57,17 +57,17 @@
         "Mode": "Min",
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc", "StackTrace" ],
+        "IgnoreColumns": [ "Id" ],
         "MaskColumns": [ "Password" ]
       },
       "Request": {
         "Mode": "Min",
-        "HttpVerbs": [ "POST","GET", "PUT", "PATCH", "DELETE" ],
+        "HttpVerbs": [ "POST", "GET", "PUT", "PATCH", "DELETE" ],
         "IgnoreRequests": [ "password", "token", "config", "/log" ],
         "EnableMask": true,
         "EnableIgnore": true,
-        "IgnoreColumns": [ "Id", "CreateDateUtc" ],
-        "MaskColumns": [ "Password", "body" ]
+        "IgnoreColumns": [ "Id", "CreateDateUtc", "Response" ],
+        "MaskColumns": [ "Password", "AppStatusCode" ]
       },
       "Audit": {
         "Mode": "Min",
