sql & audit model to object and serialize for mssql

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\images\profiles\" />
+    <Folder Include="wwwroot\logs\" />
   </ItemGroup>
 
 </Project>
