--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "File",
+    "ProviderType": "MSSql",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
@@ -94,7 +94,7 @@
         "LogType": [ "Sql", "Error", "Request", "Audit" ],
         "Retention": "3d",
         "FileSize": "5MB",
-        "Path": "Logs",
+        "Path": "logs",
         "FileFormate": "JSON",
         "Filename": ""
       },
