Mongo db bug solved after refactoring file log

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "MSSql",
+    "ProviderType": "Mongo",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
@@ -107,7 +107,7 @@
         "Password": "admin",
         "DatabaseName": "Logger",
         "DatabaseName1": "Logger",
-        "ConnectionString": "mongodb://admin:admin@localhost:27017"
+        "ConnectionString": "mongodb://localhost:27017/"
       },
       "CosmosDb": {
         "LogType": [ "Sql", "Error", "Request", "Audit" ],
