--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAppConnection": "Data Source=BS-1002\\SQLEXPRESS;Initial Catalog=DotnetLoggerWrapper; User Id=sa; Password = 12345; Integrated Security=False;MultipleActiveResultSets=True"
+    "WebAppConnection": "Data Source=localhost;Initial Catalog=DotnetLoggerWrapper; User Id=sa; Password = 123456; Integrated Security=False;MultipleActiveResultSets=True"
   },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -92,7 +92,7 @@
       },
       "File": {
         "LogType": [ "Sql", "Error", "Request", "Audit" ],
-        "Retention": "0d",
+        "Retention": "3d",
         "FileSize": "5MB",
         "Path": "logs",
         "FileFormate": "JSON",
