--- a/WebApp7/appsettings.json
+++ b/WebApp7/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "File",
+    "ProviderType": "Mongo",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
