--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "Mssql",
+    "ProviderType": "File",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
@@ -93,7 +93,7 @@
       "File": {
         "LogType": [ "Sql", "Error", "Request", "Audit" ],
         "Retention": "3d",
-        "FileSize": "5MB",
+        "FileSize": "10MB",
         "Path": "logs",
         "FileFormate": "JSON",
         "Filename": ""
