wwwroot files are removed

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -13,9 +13,13 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\Configurations\**" />
+    <Compile Remove="wwwroot\images\**" />
     <Content Remove="Controllers\Configurations\**" />
+    <Content Remove="wwwroot\images\**" />
     <EmbeddedResource Remove="Controllers\Configurations\**" />
+    <EmbeddedResource Remove="wwwroot\images\**" />
     <None Remove="Controllers\Configurations\**" />
+    <None Remove="wwwroot\images\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -70,8 +74,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\images\profiles\" />
     <Folder Include="wwwroot\logs\" />
   </ItemGroup>
 
