--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "File",
+    "ProviderType": "CosmosDb",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
@@ -78,7 +78,7 @@
         "IgnoreSchemas": [],
         "IgnoreTables": [],
         "IgnoreColumns": [ "Id", "CreatedBy" ],
-        "MaskColumns": [ "Password" ]
+        "MaskColumns": [ "Password", "motto" ]
       }
     },
     "Provider": {
@@ -100,7 +100,7 @@
       },
       "Mongo": {
         "LogType": [ "Sql", "Error", "Request", "Audit" ],
-        "Retention": "1d",
+        "Retention": "3d",
         "Server": "localhost",
         "Port": 27017,
         "Username": "admin",
