dashboard repository interface created and implemented for mssql

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -37,7 +37,7 @@
     }
   },
   "LoggerWrapper": {
-    "ProviderType": "CosmosDb",
+    "ProviderType": "Mssql",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
@@ -63,11 +63,11 @@
       "Request": {
         "Mode": "Min",
         "HttpVerbs": [ "POST", "GET", "PUT", "PATCH", "DELETE" ],
-        "IgnoreRequests": [ "password", "token", "config", "/log" ],
+        "IgnoreRequests": [ "password", "token", "config", "/log","dlw" ],
         "EnableMask": true,
         "EnableIgnore": true,
         "IgnoreColumns": [ "Id" ],
-        "MaskColumns": [ "Password", "AppStatusCode" ]
+        "MaskColumns": [ "Password" ]
       },
       "Audit": {
         "Mode": "Min",
