implemented ignore retention policy for log types

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -39,6 +39,7 @@
   "LoggerWrapper": {
     "ProviderType": "File",
     "LogType": [ "Sql", "Error", "Request", "Audit" ],
+    "IgnoreRetentionPolicy": [],
     "IgnoreEndPoints": [],
     "IgnoreHttpVerbs": [],
     "Mode": "Full",
