warning cleaned temp

--- a/.editorconfig
+++ b/.editorconfig
@@ -22,3 +22,5 @@ dotnet_diagnostic.S2365.severity = none
 
 # IDE0037: Use inferred member name
 dotnet_style_prefer_inferred_anonymous_type_member_names = false:suggestion
+
+dotnet_diagnostic.CS0168.severity = none
